stylesheets/shop.css
/* ... */
blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

/* End Eric Meyer's reset. */


/* ========================================= */
/* General CSS rules */

* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing:    border-box;
  box-sizing:         border-box;
}
html{
  height: 100%;
  background: none
}
body {
  height: 100%;
  background: #ffffff;
  font-family: 'Playfair Display', serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.3em;
  color: #1c1e1d;
}
#page-container {
  padding: 0 20px;
  min-height: 100%;
	height: auto !important;
	height: 100%;
	margin: 0 auto -200px;
}
.push, footer{
  min-height: 200px;
}
.flash.notice {
  margin: 0 auto;
}
a {
  color: #1c1e1d;
  text-decoration: none;
  -webkit-transition: 500ms background, color;
  -moz-transition:    500ms background, color;
  -ms-transition:     500ms background, color;
  transition:         500ms background, color;
}
a:hover {
  color: #939393;
}
a:active {
  color: #939393;
}

/* ========================================= */
/* Header */

header {
  padding-top: 15px;
  position: relative;
  margin-left: -20px;
  margin-right: -20px;
  background-color: #f2e9e9;
}
header #header-content{
  max-width:960px;
  margin:auto;
  position:relative;
  margin-top: 25px;
}
#head_logo {
  text-align: left;
  min-height: 100px;
}
#head_logo a, #head_logo a:hover {
  background: transparent;
}
#head_logo a{
  display: block;
  text-align: center;
}
#head_logo span {
  display: none;
}
#head_logo a img{
  margin: auto;
}
#head_logo div.generated_logo span {
  display: block;
  font-size: 2.5em;
  text-transform: uppercase;
  margin-top: 1em;
  font-weight: 400;
  line-height: 1;
}
#contact-info{
  position:absolute;
  top:0;
  left:0;
}
#contact-info ul li{
  float:left;
  padding: 0 4px;
}
#contact-info ul li a{
  cursor:pointer;
  display:block;
  width: 20px;
  border-radius: 30px;
  text-align: left;
  height: 30px;
  color: #232020;
}
#contact-info ul li a:hover {
  color: #939393;
}
#contact-info ul li a i{
  font-size: 16px;
  padding: 6px 0;
  width: 20px;
}
#contact-info ul li.phone{
  clear:both;
  line-height: 24px;
  margin-top: 10px;
  font-size: 12px;
  font-weight: 400;
}
#contact-info ul li.phone i{
  color: #232020;
  font-size: 16px;
  margin-right: 5px;
  top: 2px;
  position: relative;
}

#nav-container{
  background: none;
}
#navigation-bar {
  text-align: center;
  margin-top: 20px;
  color: #fff;
  max-width: 960px;
  margin: auto;
}
#navigation-bar li {
  display: inline-block;
  padding: 0 4px;

}
#navigation-bar li a {
  display: block;
  font-size: 0.85em;
  font-weight: 400;
  text-transform: uppercase;
  color:#1c1e1d;
  letter-spacing: 0.5px;
  padding: 2px 10px;
}
#navigation-bar li a:hover{
  color: #939393;
}
#navigation-bar li.current-page a {
  color: #000;
  border-bottom: 2px solid #000;
}
#cart-bar {
  position: absolute;
  top: -40px;
  right: 0px;
  z-index: 100;
}
#cart-bar a {
  display: block;
  padding: 2px 20px;
  background: #232020;
  color: #fff;
  font-size: 12px;
}
#cart-bar a:hover {
  background: #939393;
}

/* Search bar */
#search_bar {
  position: absolute;
  top: 0;
  right: 0;
  font-size: .9em;
}
#search_bar form{
  border: 1px solid #232020;
}
#search_bar label {
  text-transform: uppercase;
  background: #fff;
  padding: 5px 16px;
  margin-right: -3px;
  display: none;
}
#search_bar form input#keywords {
  border: 0;
  background: none;
  padding: 5px 16px;
}
#search_bar form input#keywords:hover ~ #search_bar form, #search_bar form input#keywords:focus ~ #search_bar form  {
  background: #939393;
  color: #fff;
}
#search_bar form input#search-button {
  background: #232020;
  -webkit-appearance: none;
  color: #fff;
  border: 0;
  padding: 6px 10px;
  font-weight: 400;
  font-size: 1.1em;
}

/* Categories */
#taxonomies {
  position: absolute;
  z-index: 10000;
}
#taxonomies ul.navigation-list {
  background: #F2F4F9;
}
#taxonomies ul.navigation-list > li > ul {
  font-size: 1.5em;
  line-height: 1.5em;
  position: absolute;
  top: 66px;
  left: 0;
  z-index: 500;
  min-width: 160px;
  font-style: italic;
}
#taxonomies ul.navigation-list > li > ul> li.current > a, #taxonomies ul.navigation-list > li > ul> li.root > ul > li.current> a{
  background-color: #F2E9E9;
  color: #232020;
}
#taxonomies ul.navigation-list.opened > li > h5 {
  background-color: #F2E9E9;
  cursor: pointer;
}
#taxonomies ul.navigation-list > li:hover > ul {
  display: block;
}
#taxonomies > ul.navigation-list > li > h5 {
  position: relative;
  z-index: 51;
  font-weight: 500;
  padding:8px;
  text-transform: uppercase;
  cursor: pointer;
  width: 160px;
  font-size: 1em;
  background-color: #F2E9E9;
  color: #000000;
}
#taxonomies > ul.navigation-list > li > h5:after{
  content: '';
  color:transparent;
  display:block;
  width:16px;
  height:8px;
  background: url('/themes/minimost/images/taxons-arrow.png');
  float: right;
  margin-top: 5px;
  background-repeat:no-repeat;
}
#taxonomies ul.navigation-list.opened > li > h5:after{
  background-position:0px -10px;
}
.navigation-list.opened:first-child li{
  border:0;
}

#taxonomies ul.navigation-list a {
  display: block;
  padding: .7em 10px;
  line-height: 1.2em;
  font-weight: 400;
  font-size: 12px;
  letter-spacing: 0.5px;
  border-bottom: 1px solid #e8e8e8;
}
#taxonomies ul.navigation-list a:hover{
  color: #939393;
}
li.root > a{
  font-weight: 900 !important;
}
#taxonomies h1{
  text-transform:uppercase;
  padding:8px;
  font-weight: 700;
  font-size: 14px;
  min-width: 160px;
  color: #232020;
}

/* ========================================= */
/* Breadcrumbs */

div.breadcrumbs, .search-results-title {
  text-align: center;
  margin-bottom: 1em;
  padding: 5px 0 0 0;
  height: 2em;
  border: 1px solid #232020;
}
/* ... */

